# tastie

./: .dockerignore  .env.example  .gitignore  Caddyfile.example  Dockerfile.example  LICENSE  README.md  cli.py  config.py  docker-compose.yml.example  justfile  main.py  pyproject.toml
core/: __init__.py  auth.py  csrf.py  database.py  dependencies.py  logging.py  middleware.py  pagination.py  result.py  search.py
models/: __init__.py  models.py
queries/: __init__.py  bookmark_queries.py
routes/: __init__.py  auth.py  bookmarks.py  partials.py  views.py
schemas/: __init__.py  auth.py  bookmark.py
services/: __init__.py  auth_service.py  bookmark_service.py  invite_service.py
static/: style.css  style.min.css  theme.js  theme.min.js
templates/: about.html  base.html  bookmark_form.html  home.html  index.html  login.html  privacy.html  register.html
templates/partials/: bookmark_item.html  bookmark_list.html  save_button.html  tags.html
